--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <!-- ARCore용 카메라 하드웨어 요구 -->
-    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ARVocabApp">
 
-    <!-- ★ 필수: AR Required(set to "required") 또는 AR Optional("optional") 지정 -->
+    <!-- ★ 필수: AR Required(set to "required") 또는 AR Optional("optional") 지정 -->
     <meta-data
         android:name="com.google.ar.core"
         android:value="required" />
