--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,6 @@ android {
         versionName "1.0"
     }
 
-    aaptOptions {
-        noCompress "tflite"
-    }
-
     buildFeatures {
         viewBinding true
     }
@@ -26,8 +22,12 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            debuggable false       // 디버그 모드를 끔
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            debuggable true
         }
     }
 
@@ -35,6 +35,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    
     kotlinOptions {
         jvmTarget = '17'
     }
@@ -50,44 +51,65 @@ android {
     }
 }
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha13'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Kotlin
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.22'
 
+    // AndroidX Fragment (명시적 추가)
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+
     // ARCore
     implementation 'com.google.ar:core:1.48.0'
 
-    // Sceneform maintained (Filament)
+    // Sceneform maintained (AndroidX 호환 버전)
     implementation 'com.google.ar.sceneform:filament-android:1.17.1'
     implementation('com.google.ar.sceneform:core:1.17.1') {
-                exclude group: 'com.android.support'
-            }
+        exclude group: 'com.android.support'
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+    }
     implementation('com.google.ar.sceneform.ux:sceneform-ux:1.17.1') {
-                exclude group: 'com.android.support'
-            }
+        exclude group: 'com.android.support'
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+    }
 
     // CameraX
-    implementation 'androidx.camera:camera-core:1.4.0'
-    implementation 'androidx.camera:camera-camera2:1.4.0'
-    implementation 'androidx.camera:camera-lifecycle:1.4.0'
-    implementation 'androidx.camera:camera-view:1.4.0'
+    implementation 'androidx.camera:camera-core:1.3.0'
+    implementation 'androidx.camera:camera-camera2:1.3.0'
+    implementation 'androidx.camera:camera-lifecycle:1.3.0'
+    implementation 'androidx.camera:camera-view:1.3.0'
 
-    // TensorFlow Lite / LiteRT
-    implementation "org.tensorflow:tensorflow-lite:2.14.0"
-    implementation "org.tensorflow:tensorflow-lite-select-tf-ops:2.14.0"
+    // TensorFlow Lite (for object recognition only)
+    implementation 'org.tensorflow:tensorflow-lite:2.14.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.4.4'
 
-    // ML Kit Translation
-    implementation 'com.google.mlkit:translate:17.0.2'
+    // Google ML Kit Translation API
+    implementation 'com.google.mlkit:translate:17.0.3'
 
     // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
+
+    // JSON processing
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
